--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,18 @@ install:
   - pip install .
 
 script:
-  - nosetests
+  - python runtest.py
 
 after_success:
   - coveralls
 
-branches:
-  only:
-    - master
+#branches:
+#  only:
+#    - master
 
-notifications:
-  slack: tradologics:HcnS6XusfcuS02waQPCG18oc
-  webhooks:
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
+#notifications:
+#  slack: tradologics:HcnS6XusfcuS02waQPCG18oc
+#  webhooks:
+#    on_success: change  # options: [always|never|change] default: always
+#    on_failure: always  # options: [always|never|change] default: always
+#    on_start: never     # options: [always|never|change] default: always
